# Patent-Lint

./: .dockerignore  .gitignore  CHECKS.md  COMMERCIAL-LICENSE.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRUST_AUDIT.md  pyproject.toml
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/api/: report.js
frontend/public/: _worker.js  patentlint-1.0.0-py3-none-any.whl  pyodideWorker.js  robots.txt  sitemap.xml
frontend/scripts/: build-hash.mjs  emit-stats.mjs  emit-version.mjs
frontend/src/: App.jsx  api.js  index.css  main.jsx
prompts/: us_judge_v1.md
scripts/: audit_hidden_terms.py  bootstrap_us_labels.py  check_trust_observers.sh  i18n_presence_check.mjs  reconcile_us_labels.py
src/patentlint/: check_order.py  cli.py  diagnostic_extractors.py  i18n.py  models.py  pipeline.py  rubric.py
tests/: test_check_emission_order.py  test_cli.py  test_diagnostic_extractors.py  test_epc_pipeline_stub.py  test_fn_harness.py  test_i18n.py  test_i18n_key_coverage.py  test_integration.py  test_models.py  test_mutation_harness.py  test_pipeline_cn.py  test_real_drafter_baselines.py  test_report_data_adapter_parity.py  test_rubric.py  test_tw_foundation.py
tests/analysis/: test_abstract.py  test_cjk_ordinal_guard.py  test_cjk_tokenize.py  test_claims.py  test_claims_audit.py  test_cn_abstract.py  test_cn_claims.py  test_cn_spec_support.py  test_cn_specification.py  test_confidence_score.py  test_connection_relationships.py  test_d1_corpus_mutation.py  test_dedup_key.py  test_drawings.py  test_en_normalize.py  test_epc_abstract.py  test_epc_claims.py  test_epc_drawings.py  test_epc_specification.py  test_figure_refs.py  test_noun_phrase_cleanup.py  test_preamble.py  test_reference_numerals.py  test_spec_support.py  test_specification.py  test_testspec123_regressions.py  test_tw_abstract.py  test_tw_claims.py  test_tw_cross_reference.py  test_tw_normalization.py  test_tw_qualifier_strip.py  test_tw_spec_support.py  test_tw_specification.py  test_tw_walker.py  test_tw_walker_didyoumean.py  test_tw_walker_dym_quality.py  test_tw_walker_strict_mode.py
tests/api/: test_app.py
tests/eval/: 2026-05-02_label_demotions.json  calibrate_confidence_threshold.py  classify_walker_fp.py  discover_clusters.py  epc_corpus_pull.py  epc_walker_fp_classify.py  fetch_tw_descriptions.py  gate1_reproducer.py  llm_judges.py  measure_term_in_desc.py  measure_tipo_anchor.py  per_draft_judge.py  phase2a_calibration.py  phase2a_results_iter1.json  phase2a_results_iter1b.json  phase2a_results_iter2.json  phase2a_results_iter2b.json  phase2a_results_iter3.json  phase2a_results_iter4.json  phase2a_results_iter5_final.json  phase2b_judging.py  phase2c_checklist.py  post_phase1_runner.py  random_sample_judge.py  real_drafter_audit.py  round1_corpus_harness.py  step0_calibration.py  step0_results.json  train_confidence_classifier.py  train_tw_classifier.py  triage_ensemble.py  triage_results_2026-05-02.json
tests/parity/: __init__.py  test_cn_loader_parity.py
tests/parser/: test_claims.py  test_claims_audit.py  (+13 more)
(+159 files in other folders)
