[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patentlint"
version = "1.0.0"
description = "Rule-based patent specification analyzer for USPTO/MPEP compliance"
readme = "README.md"
license = "LicenseRef-PolyForm-Strict-1.0.0"
requires-python = ">=3.11"
authors = [
    { name = "Christopher Chen" },
]
keywords = ["patent", "USPTO", "MPEP", "linting", "legal-tech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.6,<3",
    "python-docx>=1.1,<2",
    "snowballstemmer>=2.2",
    "click>=8.1,<9",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=62",
    "jinja2>=3.1",
]
api = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "python-multipart>=0.0.9",
    "patentlint[pdf]",
]
dev = [
    "pytest>=8.1,<9",
    "pytest-cov>=5,<6",
    "httpx>=0.27",
    "ruff>=0.4,<1",
]
all = ["patentlint[api,dev]"]

[project.scripts]
patentlint = "patentlint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/patentlint"]

# Bundle the frontend locale JSON files into the wheel so Python-side
# i18n (weasyprint PDF, CLI output) uses the same copy as React. Source
# of truth stays in frontend/src/i18n/locales/; hatchling mirrors into
# patentlint/_locales/ at build. The i18n helper prefers the wheel
# location, falling back to the dev tree in editable installs.
[tool.hatch.build.targets.wheel.force-include]
"frontend/src/i18n/locales" = "patentlint/_locales"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
